@@ -2,10 +2,13 @@
 
 ## 0.9.0
 
+Release date: 2018-06-27
+
 * Change default charset from latin1 to utf8mb4.  (because MySQL 8 changed) (#692)
+* Support sha256_password and caching_sha2_password auth method (#682)
+* Add cryptography dependency, because it's needed for new auth methods.
 * Remove deprecated `no_delay` option (#694)
 * Support connection attributes (#679)
-* Support sha256_password and caching_sha2_password auth method (#682)
 * Map LOCK_DEADLOCK to OperationalError (#693)
 
 ## 0.8.1
